# sparkext

./: .gitignore  README.md  setup.cfg  test_notebooks.sh
examples/: dl_pydoc.ipynb  huggingface.ipynb  mnist_pyspark.ipynb  pyarrow_reader.ipynb  pyarrow_writer.ipynb  pytorch.ipynb  requirements.txt  scratch.ipynb  spark_pt.ipynb  spark_tf.ipynb  tensorflow.ipynb  test_dl_api.ipynb
examples/cache_test/: README.md  cache_pudf1.py  cache_pudf2.py  cache_rdd.py  cache_test.ipynb  cache_test.py
examples/huggingface/: conditional_generation.ipynb  create_conda_env.sh  pipelines.ipynb  sentence_transformers.ipynb
examples/models/hf_model/: config.pbtxt
examples/models/hf_model/1/: model.py
examples/models/my_pet_classifier/: config.pbtxt
examples/models_hf/hf_generation/1/: model.py
examples/models_hf/hf_transformer/1/: model.py
examples/pytorch/: image_classification.ipynb  regression.ipynb
examples/tensorflow/: feature_columns.ipynb  image_classification.ipynb  keras-metadata.ipynb  text_classification.ipynb
src/sparkext/: __init__.py  framework.py  model.py  model_summary.py  params.py  tensorflow.py  transformer.py  udf.py  util.py
src/sparkext/huggingface/: __init__.py  globals.py  model.py  udf.py
src/sparkext/tensorflow/: __init__.py  globals.py  model.py  model_summary.py  udf.py
src/sparkext/torch/: __init__.py  globals.py  model.py  model_summary.py  udf.py
src/sparkext_tf/: __init__.py  model.py  model_summary.py  udf.py
tests/: test_base.py  test_huggingface.py  test_pytorch.py  test_tensorflow.py  test_torch.py  test_util.py
