[metadata]
name = sparkext
version = 0.0.1
author = Lee Yang
author_email = leewyang@gmail.com
description = Spark DL inference integrations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sparkext
project_urls =
    Bug Tracker = https://github.com/sparkext/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
